# CPlusPlusSandbox

./: .gitignore  CMakeLists.txt
assets/: Package.appxManifest
include/: filesystem.h  shader.h
shaders/: model.fs  model.vs
source/: main.cpp
